# miniGU

./: .gitattributes  .gitignore  .gitmodules  0001-Add-explain-statement-to-AST.patch  CLAUDE.md  Cargo.toml  README.md  deny.toml  minigu-workspace.code-workspace  sqllogictest_integration_proposal.md  typos.toml
DiskANN-rs/vector/: Cargo.toml
DiskANN-rs/vector/src/: distance.rs  half.rs  l2_float_distance.rs  lib.rs
cmd_drivers/build_and_insert_delete_memory_index/: Cargo.toml
cmd_drivers/build_disk_index/: Cargo.toml
cmd_drivers/build_disk_index/src/: main.rs
cmd_drivers/build_memory_index/: Cargo.toml
cmd_drivers/convert_f32_to_bf16/: Cargo.toml
cmd_drivers/convert_f32_to_bf16/src/: main.rs
cmd_drivers/search_memory_index/: Cargo.toml
cmd_drivers/search_memory_index/src/: search_index_utils.rs
diskann-rs/: .gitignore  Cargo.toml
diskann-rs/DiskANN/src/common/: filter_mask.rs
diskann-rs/DiskANN/src/test_utils/: mod.rs
diskann-rs/cmd_drivers/build_and_insert_delete_memory_index/src/: main.rs
diskann-rs/cmd_drivers/build_and_insert_memory_index/: Cargo.toml
diskann-rs/cmd_drivers/load_and_insert_memory_index/: Cargo.toml
diskann-rs/diskann/src/platform/: linux.rs
diskann-rs/diskann/src/utils/: timer.rs
diskann-rs/vector/: Cargo.toml
diskann-rs/vector/src/: distance_test.rs
minigu-cli/: Cargo.toml
minigu-cli/src/: cli.rs  lib.rs  script_executor.rs  shell.rs
minigu-cli/src/shell/: command.rs  context.rs  editor.rs  mod.rs
minigu-cli/tests/: shell_test.rs
minigu-cli/tests/snapshots/: shell_test__shell_command_cd_dir.snap  shell_test__shell_command_cd_file.snap  shell_test__shell_command_cd_no_arg.snap  shell_test__shell_command_cd_non_existent_dir.snap  shell_test__shell_command_cd_non_existent_dir@unix.snap  shell_test__shell_command_cd_non_existent_dir@windows.snap  shell_test__shell_command_cd_too_many_arg.snap  shell_test__shell_help.snap
minigu-test/: Cargo.toml  README.md  SCHEME.md  e2e_test.rs  insta_test.rs  parser_test.rs
minigu-test/data/export_basic/: friend.csv  manifest.json
minigu-test/end2end/: e2e_test.rs
minigu-test/gql/basic/: export_basic_test.gql  export_basic_test@e2e.snap  export_basic_test@parser.snap  import_basic_test.gql  import_basic_test@e2e.snap  import_basic_test@parser.snap  multi_statement_test@e2e.snap  multi_statement_test@parser.snap
minigu-test/gql/ddl/: create_drop_vector_index.gql  create_drop_vector_index@e2e.snap  create_drop_vector_index@parser.snap  ddl_drop@e2e.snap  ddl_truncate@e2e.snap
minigu-test/gql/dml/: match_filter.gql  match_filter@e2e.snap  match_filter@parser.snap
minigu-test/gql/dql/: dql@e2e.snap  vector_search.gql  vector_search@e2e.snap  vector_search@parser.snap
minigu-test/gql/finbench/tsr2/: tsr2@e2e.snap
minigu-test/gql/misc/: dml_dql@e2e.snap  optional_match.gql  text2graph@e2e.snap
minigu-test/gql/persistence/: persistence_reopen@e2e.snap
minigu-test/gql/snb/: is6@e2e.snap
minigu-test/gql/utility/: explain_create_index@parser.snap  explain_create_vector_index.gql  explain_create_vector_index@parser.snap  explain_drop_index.gql  explain_drop_index@e2e.snap  explain_drop_vector_index.gql  explain_drop_vector_index@e2e.snap  explain_drop_vector_index@parser.snap  explain_limit@e2e.snap  explain_logical_match@e2e.snap  explain_offset@parser.snap  explain_one_row@e2e.snap  explain_optional_match.gql  explain_vector_limit_approx.gql  explain_vector_limit_approx@e2e.snap  explain_vector_limit_approx@parser.snap  explain_vector_limit_exact.gql  explain_vector_limit_exact@e2e.snap  explain_vector_limit_exact@parser.snap
minigu-test/parser/: parser_test.rs
minigu-test/slt/basic/: comprehensive.slt  show_procedures.slt
minigu-test/sql/basic/: create_graph.slt  echo.slt
minigu-test/sql/finbench/: tsr1.slt  tsr2.slt  tsr3.slt  tsr4.slt  tsr5.slt  tsr6.slt
minigu-test/sql/gql_on_one_page/: gql_on_one_page.slt
minigu-test/sql/misc/: ddl_drop.slt  ddl_truncate.slt  dml_dql.slt  vector_index.slt
minigu-test/sql/opengql/: create_graph.slt  create_schema.slt  insert.slt  match.slt  match_and_insert.slt  session_set.slt
minigu-test/sql/snb/: is1.slt  is2.slt  is3.slt  is4.slt  is5.slt  is6.slt  is7.slt
minigu-test/src/: insta_test.rs  lab1_filter_test.rs  lab2_executor_test.rs  lab3_optimizer_test.rs  lib.rs  optional_match_test.rs  slt_adapter.rs  sqllogictest_adapter.rs
minigu-test/tests/: e2e_test.rs  sqllogictest.rs  sqllogictest_runner.rs
minigu-wasm/: Cargo.toml
minigu-wasm/src/: lib.rs
minigu-wasm/tests/: wasm_browser.rs
minigu/binder/: Cargo.toml
minigu/binder/src/: catalog_ref.rs  context.rs  error.rs  lib.rs  macros.rs  mock.rs  mock_catalog.rs  object_ref.rs  types.rs
minigu/catalog/: Cargo.toml
minigu/catalog/src/: catalog.rs  error.rs  graph.rs  graph_type.rs  label_set.rs  lib.rs  procedure.rs  property.rs  provider.rs  schema.rs  types.rs  vector_index.rs  vertex_edge.rs
minigu/common/: Cargo.toml
minigu/common/src/: constants.rs  data_type.rs  error.rs  increment.rs  lib.rs  ordering.rs  registry.rs  types.rs  value.rs
minigu/core/: Cargo.toml
minigu/core/src/: catalog_persistence.rs  database.rs  error.rs  lib.rs  session.rs
minigu/execution/: Cargo.toml
minigu/execution/src/: builder.rs  error.rs  lib.rs
minigu/gql/execution/: Cargo.toml
minigu/main/: Cargo.toml
minigu/main/src/: database.rs  error.rs  graph.rs  lib.rs  session.rs
minigu/parser/: Cargo.toml  build.rs
minigu/parser/benches/: parse.rs
minigu/parser/src/: ast.rs  error.rs  gql.lalrpop  lexer.rs  lib.rs  parser.rs  span.rs  unescape.rs
minigu/parser/tests/: parser_test.rs
minigu/python/: README.md  __init__.py  build.rs  minigu.py  pyproject.toml  test_minigu_api.py
minigu/python/minigu/: __init__.py  minigu.py
minigu/python/src/: lib.rs
minigu/storage/: Cargo.toml  REFACTORING_SUMMARY.md
minigu/storage/diskann-rs/: readme.md
minigu/storage/src/: error.rs  lib.rs  storage.rs  transaction.rs
minigu/storage/src/tp/: mod.rs  (+4 more)
minigu/storage/tests/: graph_integration_test.rs  integration_tests.rs  isolation_level_test.rs
(+1810 files in other folders)
