[workspace]
members = [
    # Public API
    "minigu/main",

    # The all-in-one CLI client
    "minigu-cli",

    # System-level tests
    "minigu-test",

    # Internal
    "minigu/binder",
    "minigu/catalog",
    "minigu/common",
    "minigu/parser",
    "minigu/storage",
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.lints.clippy]
complexity = "warn"
correctness = "deny"
perf = "warn"
style = "warn"
suspicious = "warn"

[workspace.dependencies]
gql-parser = { path = "minigu/parser", features = ["std", "serde", "miette"] }
minigu-binder = { path = "minigu/binder" }
minigu-catalog = { path = "minigu/catalog" }
minigu-common = { path = "minigu/common" }

divan = "0.1.17"
insta = { version = "1.42.2", features = ["yaml"] }
miette = { version = "7.5.0", features = ["fancy"] }
paste = "1.0.15"
serde = { version = "1.0.219", default-features = false }
smol_str = { version = "0.3.2", default-features = false }
thiserror = { version = "2.0.12", default-features = false }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
