# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT license.

[workspace]
members = [
  "cmd_drivers/build_memory_index",
  "cmd_drivers/build_and_insert_memory_index",
  "cmd_drivers/load_and_insert_memory_index",
  "cmd_drivers/convert_f32_to_bf16",
  "cmd_drivers/search_memory_index",
  "cmd_drivers/build_disk_index",
  "cmd_drivers/build_and_insert_delete_memory_index",
  "vector",
  "DiskANN",
]
resolver = "2"

[profile.release]
codegen-units = 1
opt-level = 3

[workspace.dependencies]
approx = "0.5.1"
bincode = "1.3.3"
bitflags = { version = "2.9.1", package = "bitflags" }
cc = "1.2.30"
clap = "4.4"
half = "2.2.1"
rand = "0.9.1"
rayon = "1.10.0"
serde = { version = "1.0.219", default-features = false, features = [
  "alloc",
  "derive",
  "rc",
] }
thiserror = "2.0.12"
vector = { path = "vector", version = "0.1.0" }
