# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT license.
[package]
edition = "2021"
license = "MIT"
name = "vector"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.7.0"
half = "2.2.1"
thiserror = { version = "2.0.12" }

[build-dependencies]
cc = "1.0.79"

[dev-dependencies]
approx = "0.5.1"
base64 = "0.21.2"
bincode = "1.3.3"
rand = "0.8.5"
serde = "1.0.163"
