# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT license.
[package]
edition = "2021"
license = "MIT"
name = "build_and_insert_delete_memory_index"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diskann = { path = "../../DiskANN" }
vector = { path = "../../vector" }
