# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT license.
[package]
edition = "2021"
license = "MIT"
name = "build_memory_index"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
diskann = { path = "../../DiskANN" }
vector = { path = "../../vector" }
