# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT license.
[package]
edition = "2021"
license = "MIT"
name = "convert_f32_to_bf16"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = "2.2.1"
