# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT license.
[package]
edition = "2021"
license = "MIT"
name = "search_memory_index"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
diskann = { path = "../../DiskANN" }
num_cpus = "1.15.0"
rayon = "1.7.0"
vector = { path = "../../vector" }
