[package]
edition.workspace = true
name = "minigu-catalog"
version = "0.1.0"

[dependencies]
minigu-common = { workspace = true }
smallvec = { version = "1.14.0", features = ["union", "serde"] }
smol_str = { workspace = true, features = ["std"] }
thiserror = { workspace = true, features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }

[lints]
workspace = true
