[package]
name = "minigu-common"
version = "0.1.0"
edition.workspace = true

[dependencies]
arrow = { workspace = true }
itertools = { workspace = true }
ordered-float = { version = "5.0.0", features = ["serde"] }
paste = { workspace = true }
thiserror = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enum-as-inner = "0.6.1"

[lints]
workspace = true
