[package]
edition.workspace = true
license.workspace = true
name = "minigu"
repository.workspace = true
version.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
walkdir = { workspace = true }

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
csv = { workspace = true }
gql-parser = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
minigu-catalog = { workspace = true }
minigu-common = { workspace = true }
minigu-context = { workspace = true }
minigu-execution = { workspace = true }
minigu-planner = { workspace = true }
minigu-storage = { workspace = true }
minigu-transaction = { workspace = true }
rand = "0.8"
dashmap = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bincode = "1.3.3"
ordered-float = "5.0.0"

[lints]
workspace = true
