[package]
edition.workspace = true
name = "minigu-execution"
version = "0.1.0"

[dependencies]
arrow = { workspace = true }
auto_impl = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
minigu-common = { workspace = true }
minigu-ir = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
