[package]
edition.workspace = true
license.workspace = true
name = "minigu-storage"
repository.workspace = true
version.workspace = true

[features]
vector-support = ["diskann", "vector"]

[dev-dependencies]
rand = { workspace = true }
serial_test = { workspace = true }
temp-file = { workspace = true }

[dependencies]
arrow = { workspace = true }
bitvec = { workspace = true }
chrono = { workspace = true }
crc32fast = { workspace = true }
crossbeam-skiplist = { workspace = true }
dashmap = { workspace = true }
minigu-common = { workspace = true }
ordered-float = { workspace = true }
parking_lot = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }
serde = { workspace = true, features = ["derive"] }
temp-dir = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
diskann = { git = "https://github.com/Boat2U/DiskANN-rs.git", rev = "0428a89844d7c9c441bad8bae1eaf64fa5d21540", optional = true }
vector = { git = "https://github.com/Boat2U/DiskANN-rs.git", rev = "0428a89844d7c9c441bad8bae1eaf64fa5d21540", optional = true }

[lints]
workspace = true
