[package]
edition.workspace = true
license.workspace = true
name = "minigu-storage"
repository.workspace = true
version.workspace = true

[features]
vector-support = ["diskann", "vector"]

[dev-dependencies]
rand = { workspace = true }
serial_test = { workspace = true }
temp-file = { workspace = true }

[dependencies]
arrow = { workspace = true }
bitvec = { workspace = true }
chrono = { workspace = true }
crc32fast = { workspace = true }
crossbeam-skiplist = { workspace = true }
dashmap = { workspace = true }
minigu-common = { workspace = true }
ordered-float = { workspace = true }
parking_lot = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }
serde = { workspace = true, features = ["derive"] }
temp-dir = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
diskann = { git = "https://github.com/Boat2U/DiskANN-rs.git", rev = "df5a7444f8f7488c96a2433fd92fb405cd5fa7a9", optional = true }
vector = { git = "https://github.com/Boat2U/DiskANN-rs.git", rev = "df5a7444f8f7488c96a2433fd92fb405cd5fa7a9", optional = true }

[lints]
workspace = true
